<resources>
    <string name="app_name">Golfaholic</string>
    <string name="start_round">Start Round</string>
    <string name="next_hole">Next Hole</string>
    <string name="at_the_turn">At The Turn</string>
    <string name="onePutt">One</string>
    <string name="twoPutt">Two</string>
    <string name="threePutt">Three</string>
    <string name="fourPutt">Four</string>
    <string name="lastHole">19th Hole</string>
    <string name="finish_round">Finish Round</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="average">Avg:\t\t</string>
    <string name="min">Min:\t\t</string>
    <string name="max">Max:\t\t</string>
    <string name="no_previous_rounds">No Rounds Played</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
</resources>
